--- a/srcjs/reactable.css
+++ b/srcjs/reactable.css
@@ -439,6 +439,17 @@ input[type='radio'].rt-select-input {
   border-color: transparent;
 }
 
+.rt-noData {
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  line-height: 0;
+  z-index: 1;
+}
+
 /* Search */
 .rt-search {
   display: block;
